[b]Version 0.5.63 (not released yet)[/b]:

(2007-12-18)
 * Moved the letterbox option to the filters submenu and renamed to 
   "Add black borders".
 * Added the new option Video->Filters->Software scaling. Makes mplayer to
   scale the video up to the width of your screen. This is slow, you'll need
   a really fast computer.

(2007-12-17)
 * Updated the Russian translation, and added regular expressions 
   (Advanced->MPlayer language) for Russian, sent by wiselord1983@gmail.com
 * Added patch by Florin Braghis <florin@libertv.ro> to support Win 98.
   Modified a little bit by me to allow it to compile under linux (for testing).
 * Added a new option: Video->Letterbox. It adds a black border around the
   video, according to the aspect ratio of the monitor.
 * Simplified the aspect ratio menu. The options "4:3 Letterbox", 
   "16:9 Letterbox", "4:3 Panscan", "4:3 to 16:9" have been deleted. The first
   two are not necessary anymore because of the new Video->Letterbox option, 
   and the last two I think they are not necessary because smplayer can 
   simulate pan&scan since some time ago. Anyway they could be added again 
   if someone really needs them.

(2007-12-14)
 * Now smplayer stores the version number of mplayer in the config file and
   can use it to know if that version provides some feature (like the 
   scaletempo filter) before running it. This makes possible to add
   "autodetection" too for options that should be passed on command line.
 * Now the option "High speed playback without altering pitch" (scaletempo) on 
   Preferences->General has 3 possible values: auto, yes and no. Auto 
   (the default) will use the scaletempo filter only if the mplayer you're
   using has that filter. "Yes" or "no" will force to use it or not, no matter
   of the mplayer version number.

(2007-12-13)
 * (Windows) Added patch by Florin Braghis <florin@libertv.ro> to improve the 
   file associations code.